---
source: tests/generation.rs
assertion_line: 70
expression: output
---
/**
 * AUTO-GENERATED FILE - DO NOT EDIT!
 *
 * This file was automatically generated by nestjs-trpc.
 * Any manual changes will be overwritten on the next generation.
 *
 * Command: `npx nestjs-trpc generate`
 * Learn more: https://nestjs-trpc.io
 */

import { initTRPC } from "@trpc/server";
import { z } from "zod";

const t = initTRPC.create();
const publicProcedure = t.procedure;
import { addressSchema } from "<FIXTURES>/complex/combined.router";

const appRouter = t.router({
  customers: t.router({
    list: publicProcedure
      .input(z.object({
    page: z.number().int().positive().default(1),
    limit: z.number().int().min(1).max(100).default(20),
}))
      .output(z.object({
            items: z.array(z.object({
    id: z.string().uuid(),
    email: z.string().email(),
    name: z.string().min(2).max(50),
    addresses: z.array(addressSchema),
    status: z.enum(['active', 'inactive', 'pending']),
    metadata: z.record(z.string(), z.unknown()).optional(),
})),
            total: z.number(),
            page: z.number(),
        }))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    create: publicProcedure
      .input(z.object({
    id: z.string().uuid(),
    email: z.string().email(),
    name: z.string().min(2).max(50),
    addresses: z.array(addressSchema),
    status: z.enum(['active', 'inactive', 'pending']),
    metadata: z.record(z.string(), z.unknown()).optional(),
}).omit({ id: true }))
      .output(z.object({
    id: z.string().uuid(),
    email: z.string().email(),
    name: z.string().min(2).max(50),
    addresses: z.array(addressSchema),
    status: z.enum(['active', 'inactive', 'pending']),
    metadata: z.record(z.string(), z.unknown()).optional(),
}))
      .mutation(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    getById: publicProcedure
      .input(z.object({ id: z.string().uuid() }))
      .output(z.object({
    id: z.string().uuid(),
    email: z.string().email(),
    name: z.string().min(2).max(50),
    addresses: z.array(addressSchema),
    status: z.enum(['active', 'inactive', 'pending']),
    metadata: z.record(z.string(), z.unknown()).optional(),
}).nullable())
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any),
    search: publicProcedure
      .input(z.object({
    page: z.number().int().positive().default(1),
    limit: z.number().int().min(1).max(100).default(20),
}).merge(z.object({
    status: z.enum(['active', 'inactive', 'pending']),
    query: z.string().optional(),
})))
      .output(z.array(z.object({
    id: z.string().uuid(),
    email: z.string().email(),
    name: z.string().min(2).max(50),
    addresses: z.array(addressSchema),
    status: z.enum(['active', 'inactive', 'pending']),
    metadata: z.record(z.string(), z.unknown()).optional(),
})))
      .query(async () => "PLACEHOLDER_DO_NOT_REMOVE" as any)
    })
});

export type AppRouter = typeof appRouter;
